--- a/jogoDeCorrida/index.html
+++ b/jogoDeCorrida/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <input type="button" value="10 Voltas" onclick="btnRuns(10)">
+    <input type="button" value="70 Voltas" onclick="btnRuns(70)">
+    <input type="button" value="160 Voltas" onclick="btnRuns(160)">
     
 <script src="javaScript.js"></script>
 </body>
